Spacing/display fixes for mobile view.

--- a/src/assets/stylesheets/_settings.scss
+++ b/src/assets/stylesheets/_settings.scss
@@ -14,4 +14,5 @@ $padding-xl: 2rem;
 
 $navbar-background-color: transparent;
 $pre-background: transparent;
-$footer-padding: $padding-lg 0 $padding-xl;
+$footer-padding: $padding-lg 1.5rem;
+$section-padding: $padding-lg 1.5rem;
